--- a/views/footer.jade
+++ b/views/footer.jade
@@ -13,7 +13,10 @@ div(class="container-fluid -dark-grey")
 	.row
 		div(class="footer-container")
 			div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4")
-				p= texts.ADRESS
+				- var adress_tmp = data.contact ? data.contact[0] : data[0];
+				- var adress = adress_tmp['adress_'+lang] && adress_tmp['adress_'+lang].split(";") ? adress_tmp['adress_'+lang].split(";") : []
+				each contact in adress
+					p= contact
 				p E-mail: support@4side.in.ua
 			div(class="col-xs-12 col-sm-2 col-md-4 col-lg-4 -center-align")
 				span(class="mini-logo")
