--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -26,6 +26,11 @@ p {
   color: #393939;
 }
 
+a:focus,
+a:hover {
+  color: #508dcb;
+}
+
 a {
   color: #508dcb;
 }
@@ -699,6 +704,18 @@ a {
   margin: auto;
 }
 
+.side-lang-wrapper a {
+  font-size: 11px;
+  display: inline-block;
+  margin-left: 7px;
+  border-bottom: 1px solid rgba(80,141,203,0.5);
+  text-decoration: none;
+}
+
+.side-lang-wrapper a:hover {
+  border-bottom: 1px solid transparent;
+}
+
 .outers-to-block {
   padding: 25px 0;
   float: right;
@@ -1214,7 +1231,6 @@ a {
 }
 
 .-side-adress {
-  margin: 30px 0 0;
   color: #787878;
   font-size: 15px;
 }
@@ -1223,6 +1239,10 @@ a {
   margin: 0;
   color: #787878;
   font-size: 15px;
+}
+
+.side-adress-wrapper {
+  margin: 30px;
 }
 .side-modal-outer {
   width: 100%;
