--- a/public/styl/004header.styl
+++ b/public/styl/004header.styl
@@ -45,6 +45,15 @@
 	background #fff
 	margin auto
 
+.side-lang-wrapper a 
+	font-size 11px
+	display inline-block
+	margin-left 7px
+	border-bottom 1px solid rgba(80,141,203,.5)
+	text-decoration none
+	&:hover
+		border-bottom: 1px solid transparent
+
 .outers-to-block
 	padding 25px 0
 	float right
