--- a/public/styl/010contact.styl
+++ b/public/styl/010contact.styl
@@ -7,7 +7,6 @@
 	font-family SFSemibold
 
 .-side-adress
-	margin 30px 0 0
 	color weryLightGrey
 	font-size 15px
 
@@ -15,3 +14,6 @@
 	margin 0
 	color weryLightGrey
 	font-size 15px
+	
+.side-adress-wrapper
+	margin 30px
