--- a/views/contact.jade
+++ b/views/contact.jade
@@ -20,9 +20,12 @@ block content
 				div(class="col-lg-12 col-md-12 col-sm-12 col-xs-12 block-for-slides-campany")
 					div(class="-for-text")
 						- var phones = data[0].phone.split(';');
-						each value in phones
-							p(class="-side-phone")= '+ '+value	 
-						p(class="-side-adress")= data[0].adress
+						- var adress = data[0]['adress_'+lang].split(';');
+						each value_phones in phones
+							p(class="-side-phone")= '+ '+value_phones
+						.side-adress-wrapper
+							each value_adress in adress
+								p(class="-side-adress")= value_adress	 
 						p(class="-side-mail")= data[0].mail
 					div(class="-for-photo")
 						img(src=data[0].src, alt="")
