add art gallery

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 			a(href="#" class="brif-for-site")= texts.REQUEST
 		.container-fluid
 			.row
-				.slider-side
+				div(class="slider-side to-index-general")
 					.-absolute-preloader
 						img(src="/images/preload.gif", alt="")
 					ul(class="slider-list")
