--- a/public/styl/003slider.styl
+++ b/public/styl/003slider.styl
@@ -21,6 +21,12 @@
 	padding-bottom 103px
 	float left
 
+.side-art
+	background url(../images/art.jpg)
+	background-repeat no-repeat
+	height 702px !important
+	background-position 50% 50%
+
 .container-item-serv
 	margin-bottom 60px
 
