--- a/views/art.jade
+++ b/views/art.jade
@@ -2,31 +2,24 @@ extends layout
 
 block content
 	include menu.jade
-	.container-all-outer
-		header(class="header-to-site")
-			a(href="/" class="logo-for-site")
-				img(src="/images/logo.png", class="-logo-web", alt="Logo")
-				img(src="/images/logo-mobile.png", class="-logo-mobile" alt="Logo Mobile")
-			a(href="#" class="menu-to-site")
-				span(class="first-line")
-				span(class="two-line")
-				span(class="third-line")
-			a(href="#" class="brif-for-site")= texts.REQUEST
+	div(class="container-all-outer grey-color")
+		include allHeader.jade
 		.container-fluid
 			.row
-				div(class="slider-side")
-					ul(class="slider-list side-for-art")
-						li(class="slider-list-item side-for-art -blue")
-							img(src="/images/slide_one.png", alt="")
-							.slider-description
-								p(class="slider-author") 
-								h2(class="slider-title")= texts.ART
-								a(href="/portfolio/56eef402b253494b0d0e6201" class="button -light-blue-button-slider")= texts.ART_GALLERY
-		div(class="container")
+				div(class="slider-side side-art")
+		.container
 			.row
-				div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
-					h2(class="name-of-services")= texts.SERVICES
-					p(class="name-of-mini-description")= texts.SERVICES_TEXT
+				div(class="col-lg-12 col-md-12 col-sm-12 col-xs-12 block-outer-team")
+					nav(class="outer-of-breadcrumps")
+						ul(class="list-of-breadcrumps")
+							each val in breadcrumps
+								if(val.link)
+									li 
+										a(href=val.link)= val.inRus
+								else
+									li= val.inRus
+					h1(class="title-of-h1")= texts.ART
+					p(class="mini-description")= texts.ART_TEXT
 		.outer-all-block-portfolio
 			div(class="container-of-slider grid")
 				- var i = 0;
@@ -36,8 +29,8 @@ block content
 						a(class="discription-of-work" href="/portfolio/"+val._id)
 							h3= val['title_'+lang]
 								span= val['description_'+lang]
-						img(src=val.tempTitle, alt=val['title_'+lang])
+						img(src=val.tempTitle, alt=val['title_'+lang])		
+						
 		include footer.jade
 	script(src="/build/masonry.pkgd.min.js")
 	script(src="/build/controller.js")
-	
