--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,15 +5,15 @@ html
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
 		meta(name="keywords" content="бизнес решения, приложения, графический дизайн иллюстрации, создание сайтов, корпоративный сайт, веб студия, дизайн сайта, разработка сайта, Yii, Node.js, React, Angular")
-		meta(name="description" content="Планирование + проектирование + дизайн + разработка + тестирование + продвижение + поддержка = НОВЫЕ КЛИЕНТЫ. Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Kohana, Node.js. 4 Side (Украина, Киев)")
+		meta(name="description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Kohana, Node.js. 4SIDE (Украина, Киев)")
 		meta(property="vk:image" content="http://4side.in.ua/images/big_logo-blue.png")
 		meta(property="og:image" content="http://4side.in.ua/images/big_logo-blue.png")
 		meta(property="image" content="http://4side.in.ua/images/big_logo-blue.png")
-		meta(property="vk:Description" content="Планирование + проектирование + дизайн + разработка + тестирование + продвижение + поддержка = НОВЫЕ КЛИЕНТЫ. Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Kohana, Node.js. 4 Side (Украина, Киев)")
-		meta(property="og:title" content="Fusion Agency 4 Side")
+		meta(property="vk:Description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Kohana, Node.js. 4SIDE (Украина, Киев)")
+		meta(property="og:title" content="#{title}")
 		meta(property="og:type" content="website")
 		meta(property="og:url" content="http://www.4side.in.ua/")
-		meta(property="og:Description" content="Планирование + проектирование + дизайн + разработка + тестирование + продвижение + поддержка = НОВЫЕ КЛИЕНТЫ. Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Kohana, Node.js. 4 Side (Украина, Киев)")
+		meta(property="og:Description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Kohana, Node.js. 4SIDE (Украина, Киев)")
 		link(rel="image_src" href="http://4side.in.ua/images/big_logo-blue.png")
 		link(rel="shortcut icon" href="/images/fav16.png")
 		link(rel="apple-touch-icon" sizes="128x128" href="/images/fav128.ico")
