--- a/public/styl/004header.styl
+++ b/public/styl/004header.styl
@@ -54,6 +54,12 @@
 	&:hover
 		border-bottom: 1px solid transparent
 
+.side-lang-wrapper span
+	font-size 11px
+	display inline-block
+	margin-left 7px
+	color weryLightGrey
+	
 .outers-to-block
 	padding 25px 0
 	float right
