--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
 		meta(property="og:type" content="website")
 		meta(property="og:url" content="http://www.4side.in.ua/")
 		meta(property="og:Description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Node.js. 4SIDE")
+		link(rel="alternate" hreflang="#{lang}" href="#{path}")
 		link(rel="image_src" href="http://4side.in.ua/images/big_logo-blue.png")
 		link(rel="shortcut icon" href="/images/fav16.png")
 		link(rel="apple-touch-icon" sizes="128x128" href="/images/fav128.ico")
