--- a/views/index.jade
+++ b/views/index.jade
@@ -5,8 +5,8 @@ block content
 	.container-all-outer
 		header(class="header-to-site")
 			a(href="/" class="logo-for-site")
-				img(src="/images/logo.png", class="-logo-web", alt="Logo")
-				img(src="/images/logo-mobile.png", class="-logo-mobile" alt="Logo Mobile")
+				img(src="/images/logo.png", class="-logo-web", alt=texts.TEXT_TITLE_ALT_EMPTY)
+				img(src="/images/logo-mobile.png", class="-logo-mobile" alt=texts.TEXT_TITLE_ALT_EMPTY)
 			a(href="#" class="menu-to-site")
 				span(class="first-line")
 				span(class="two-line")
@@ -16,28 +16,28 @@ block content
 			.row
 				div(class="slider-side to-index-general")
 					.-absolute-preloader
-						img(src="/images/preload.gif", alt="")
+						img(src="/images/preload.gif", alt="4SIDE preloader")
 					ul(class="slider-list")
 						li(class="slider-list-item -blue")
-							img(src="/images/slide_one.png", alt="")
+							img(src="/images/slide_one.png", alt=texts.TEXT_TITLE_ALT_EMPTY)
 							.slider-description
 								p(class="slider-author") henri weuse
 								h2(class="slider-title")= texts.CLASSIC
 								a(href="/portfolio/56eef402b253494b0d0e6201" class="button -light-blue-button-slider")= texts.MORE
 						li(class="slider-list-item -ros")
-							img(src="/images/slide_two.png", alt="")
+							img(src="/images/slide_two.png", alt=texts.TEXT_TITLE_ALT_EMPTY)
 							.slider-description
 								p(class="slider-author") lis master
 								h2(class="slider-title")= texts.WOODS
 								a(href="/portfolio/56eef184b253494b0d0e61fb" class="button -light-rose-button-slider")= texts.MORE
 						li(class="slider-list-item -greens")
-							img(src="/images/slide_three.png", alt="")
+							img(src="/images/slide_three.png", alt=texts.TEXT_TITLE_ALT_EMPTY)
 							.slider-description
 								p(class="slider-author") sleep expert
 								h2(class="slider-title")= texts.EMPIRE
 								a(href="/portfolio/56eef27fb253494b0d0e61fd" class="button -light-green-button-slider")= texts.MORE
 						li(class="slider-list-item -violets")
-							img(src="/images/slide_four.png", alt="")
+							img(src="/images/slide_four.png", alt=texts.TEXT_TITLE_ALT_EMPTY)
 							.slider-description
 								p(class="slider-author") ascania flora
 								h2(class="slider-title")= texts.FLORA
