--- a/views/portfolio_single_project.jade
+++ b/views/portfolio_single_project.jade
@@ -30,7 +30,7 @@ block content
 							br
 							span=data.portfolio["origin_"+lang]
 				.side-work-gallery
-						img(src=data.gallery.src[0], alt="")
+						img(src=data.gallery.src[0], alt="4SIDE Design & Development " + data.portfolio["title_"+lang])
 
 						
 			
