--- a/views/footer.jade
+++ b/views/footer.jade
@@ -21,7 +21,8 @@ div(class="container-fluid -dark-grey")
 			div(class="col-xs-12 col-sm-2 col-md-4 col-lg-4 -center-align")
 				span(class="mini-logo")
 			div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4 -rigth-align")
-				p(itemprop="name") © 2016 4SIDE Web Agency All rights reserved
+				p(itemprop="name") 4SIDE Extraordinary Agency
+				p © 2016 All rights reserved
 				.social-share-button
 					a(href="https://vk.com/4sideWebAgency" target="_blank" class="vk social-link")
 					a(href="https://www.facebook.com/groups/1586755234985038/" target="_blank" class="fb social-link")
