--- a/views/allHeader.jade
+++ b/views/allHeader.jade
@@ -1,6 +1,6 @@
 header(class="header-to-all-page")
 	a(href="/") 
-		img(src="/images/logo-black.jpg", alt="")
+		img(src="/images/logo-black.jpg", alt=texts.TEXT_TITLE_ALT_EMPTY)
 	div(class="outers-to-block")
 		a(href="#" class="menu-to-site -colors")
 			span(class="first-line")
