--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -19,13 +19,13 @@ block content
 					p(class="mini-description")= texts.PORTFOLIO_TEXT
 		.container-fluid
 			.row
-				div(class="container-of-slider grid")
+				div(class="container-of-slider grid" itemscope itemtype="http://schema.org/Product")
 					each value in data.portfolio
 						.grid-item
-							a(class="discription-of-work" href="/portfolio/"+value._id)
-								h3=value['title_'+lang]
-									span=value['description_'+lang]
-							img(src=value.tempTitle, alt=value['title_'+lang])
+							a(itemprop="url" class="discription-of-work" href="/portfolio/"+value._id)
+								h3(itemprop="name")=value['title_'+lang]
+									span(itemprop="description")=value['description_'+lang]
+							img(itemprop="image" src=value.tempTitle, alt=value['title_'+lang])
 			
 		include footer.jade
 	script(src="/build/masonry.pkgd.min.js")
