--- a/views/about.jade
+++ b/views/about.jade
@@ -28,4 +28,4 @@ block content
 							img(src= data.about[j].src, alt= texts.TEXT_TITLE_ALT_EMPTY)
 						
 		include footer.jade
-	script(src="/build/controller.js")
+	script(src="/build/controller.js" async)
