--- a/views/contact.jade
+++ b/views/contact.jade
@@ -30,4 +30,4 @@ block content
 					div(class="-for-photo")
 						img(src=data[0].src, alt=texts.TEXT_TITLE_ALT_EMPTY)
 		include footer.jade
-	script(src="/build/controller.js")
+	script(src="/build/controller.js" async)
