--- a/views/err.jade
+++ b/views/err.jade
@@ -16,4 +16,4 @@ block content
 						| #{texts.ERR_RIGHT_MENU}
 
 		include footer.jade
-	script(src="/build/controller.js")
+	script(src="/build/controller.js" async)
