--- a/views/index.jade
+++ b/views/index.jade
@@ -117,6 +117,6 @@ block content
 								span= texts.DEVELOPMENT
 							p= texts.DEVELOPMENT_TEXT
 		include footer.jade
-	script(src="/build/masonry.pkgd.min.js")
-	script(src="/build/controller.js")
+	script(src="/build/masonry.pkgd.min.js" async)
+	script(src="/build/controller.js" async)
 	
