--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -28,5 +28,5 @@ block content
 							img(itemprop="image" src=value.tempTitle, alt=value['title_'+lang])
 			
 		include footer.jade
-	script(src="/build/masonry.pkgd.min.js")
-	script(src="/build/controller.js")
+	script(src="/build/masonry.pkgd.min.js" async)
+	script(src="/build/controller.js" async)
