--- a/views/portfolio_single_project.jade
+++ b/views/portfolio_single_project.jade
@@ -37,4 +37,4 @@ block content
 		include footer.jade
 	script
 		|var local_data =!{JSON.stringify(data)};
-	script(src="/build/controller.js")
+	script(src="/build/controller.js" async)
