--- a/views/team.jade
+++ b/views/team.jade
@@ -26,4 +26,4 @@ block content
 								h4= value.profession
 								p= value['description_'+lang] 
 		include footer.jade
-	script(src="/build/controller.js")
+	script(src="/build/controller.js" async)
