--- a/views/art.jade
+++ b/views/art.jade
@@ -32,5 +32,5 @@ block content
 						img(src=val.tempTitle, alt=val['title_'+lang])		
 						
 		include footer.jade
-	script(src="/build/masonry.pkgd.min.js")
-	script(src="/build/controller.js")
+	script(src="/build/masonry.pkgd.min.js" async)
+	script(src="/build/controller.js" async)
