--- a/public/styl/004header.styl
+++ b/public/styl/004header.styl
@@ -24,12 +24,18 @@
 		padding 2px 0
 		border-bottom 1px solid transparent
 		text-decoration none
+	&:active
+		color #fff
+	&:focus
+		color #fff
 
 .brif-for-site.colors-blue
 	color #508dcb
 	border-bottom 1px solid rgba(80,141,203, .5)
 	&:hover 
 		border-bottom 1px solid transparent
+	&:active
+		color #508dcb
 
 .menu-to-site
 	float right
