--- a/public/styl/002defaul.styl
+++ b/public/styl/002defaul.styl
@@ -20,12 +20,10 @@ h1, h2, h3, h4, h5, h6, p
 
 a:focus, a:hover
 	color link
+	text-decoration none
 
 a
 	color link
-
-.-blur
-	filter blur(5px)
 
 .container-all-outer
 	position relative
