--- a/public/styl/004header.styl
+++ b/public/styl/004header.styl
@@ -43,6 +43,17 @@
 	height 26px
 	position relative
 	margin 1px 0 0 30px
+	
+.side-by-4SIDE
+	display block
+	font-size 12px
+	text-transform initial
+	font-family 'Playfair Display'
+	right 0
+	left 0
+	margin auto
+	width 49px
+    position absolute
 
 .menu-to-site span
 	position absolute
