--- a/public/styl/002defaul.styl
+++ b/public/styl/002defaul.styl
@@ -52,7 +52,7 @@ a
 	list-style none
 
 .list-menu li 
-	padding 23px 0
+	padding 18px 0
 
 .list-menu li a
 	font-size 15px
@@ -63,6 +63,12 @@ a
 	color greyText
 	&:hover
 		border-bottom 1px solid rgba(48, 121, 193, .38)
+		color blues
+
+.side-menu-multiply
+	border-bottom 1px solid #ddd i
+	&:hover
+		border-bottom 1px solid rgba(48, 121, 193, .38) i
 		color blues
 
 .-light-blue
