--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -3,7 +3,10 @@
 .outer-all-block-portfolio
 	padding 15px
 	background rgb(245, 245, 245)
-	
+
+.block-outer-else-portfolio
+	padding 75px 0 20px
+
 .container-of-slider
 	background rgb(245, 245, 245)
 
@@ -48,6 +51,9 @@
 	display flex
 	justify-content center
 
+.flex-wrap
+	flex-wrap wrap
+
 .rigth-side
 	padding 0 30px
 
@@ -66,6 +72,11 @@
 	padding 10px 0
 	margin 0
 	font-family 'Playfair Display'
+
+.side-else-portfolio
+	display block
+	width 100%
+	text-align center
 
 .side-technology, .side-origin
 	text-transform uppercase
