--- a/views/menu.jade
+++ b/views/menu.jade
@@ -13,8 +13,15 @@
 		li 
 			a(href="/about")= texts.ABOUT
 		li 
-			a(href="/portfolio")= texts.PORTFOLIO
-		li 
 			a(href="/team")= texts.TEAM
 		li 
 			a(href="/contact")= texts.CONTACT
+		li 
+			a(href="/portfolio" class="side-menu-multiply")= texts.PORTFOLIO
+				span(class="side-by-4SIDE") by 4SIDE
+		li 
+			a(href="/interior" class="side-menu-multiply")= texts.INTERIOR
+				span(class="side-by-4SIDE") by 4SIDE
+		li 
+			a(href="/art" class="side-menu-multiply")= texts.ART_MENU
+				span(class="side-by-4SIDE") by 4SIDE
