add new portfolio

--- a/public/styl/002defaul.styl
+++ b/public/styl/002defaul.styl
@@ -114,6 +114,27 @@ a
 	text-transform uppercase
 	margin 0px 0 10px 0
 
+
+.__anouther
+	padding-bottom 50px
+
+.__anouther h2 
+	margin 0 0 40px 0
+
+.__anouther p 
+	color weryLightGrey
+	padding-left 55px
+	position relative
+	&:before
+		content ""
+		position absolute
+		width 70px
+		height 12px
+		left -25px
+		display block
+		background url(../images/sprite.png) -286px -362px no-repeat
+		top 4px
+
 .container-item-precess
 	margin-bottom 70px
 
