--- a/views/index.jade
+++ b/views/index.jade
@@ -116,17 +116,13 @@ block content
 							h3(class="margin-class arrow-class") 
 								span= texts.DEVELOPMENT
 							p= texts.DEVELOPMENT_TEXT
-
-		div(class="container-fluid -all-to-center -back-grey")
-			.row
-				div(class="container")
-					.row
-						div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12")
-							h2(class="name-of-services margin-more")= texts.SEO_TEXT_TITLE
+					div(class="col-xs-12 col-sm-12 col-md-12 col-lg-12 __anouther")
+							h2(class="name-of-services")= texts.SEO_TEXT_TITLE
 							p= texts.SEO_TEXT_P1
 							p= texts.SEO_TEXT_P2
 							p= texts.SEO_TEXT_P3
 							p= texts.SEO_TEXT_P4
+						
 
 		include footer.jade
 	script(src="/build/masonry.pkgd.min.js" async)
