--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -155,6 +155,31 @@ a {
   margin: 0px 0 10px 0;
 }
 
+.__anouther {
+  padding-bottom: 50px;
+}
+
+.__anouther h2 {
+  margin: 0 0 40px 0;
+}
+
+.__anouther p {
+  color: #787878;
+  padding-left: 55px;
+  position: relative;
+}
+
+.__anouther p:before {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 12px;
+  left: -25px;
+  display: block;
+  background: url("../images/sprite.png") -286px -362px no-repeat;
+  top: 4px;
+}
+
 .container-item-precess {
   margin-bottom: 70px;
 }
