--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -103,7 +103,7 @@
 
 .side-work-gallery > div 
 	display table 
-	margin 0 auto
+	margin 0 auto 20px
 
 @media screen and (max-width: 1280px)	
 	.container-of-slider .grid-item
