--- a/public/css/styl.css
+++ b/public/css/styl.css
@@ -995,6 +995,10 @@ position absolute,
   width: 33%;
 }
 
+.art-no-resize {
+  width: 49.9%;
+}
+
 .title-for-portfolio-single {
   margin: 0 auto;
   display: -webkit-box;
