--- a/views/menu.jade
+++ b/views/menu.jade
@@ -22,6 +22,6 @@
 		li 
 			a(href="/interior" class="side-menu-multiply")= texts.INTERIOR
 				span(class="side-by-4SIDE") by 4SIDE
-		//- li 
-		//- 	a(href="/art" class="side-menu-multiply")= texts.ART_MENU
-		//- 		span(class="side-by-4SIDE") by 4SIDE
+		li 
+			a(href="/art" class="side-menu-multiply")= texts.ART_MENU
+				span(class="side-by-4SIDE") by 4SIDE
