--- a/views/footer.jade
+++ b/views/footer.jade
@@ -17,7 +17,7 @@ div(class="container-fluid -dark-grey")
 				- var adress = adress_tmp['adress_'+lang] && adress_tmp['adress_'+lang].split(";") ? adress_tmp['adress_'+lang].split(";") : []
 				each contact in adress
 					p(itemprop="streetAddress")= contact
-				p(itemprop="email") E-mail: support@4side.in.ua
+				p(itemprop="email") E-mail: support@4side.xyz
 			div(class="col-xs-12 col-sm-2 col-md-4 col-lg-4 -center-align")
 				span(class="mini-logo")
 			div(class="col-xs-12 col-sm-5 col-md-4 col-lg-4 -rigth-align")
