--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,16 +4,16 @@ html
 		title= title
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
-		meta(name="keywords" content="бизнес решения, приложения, графический дизайн, иллюстрации, создание сайтов, корпоративный сайт, веб студия, дизайн сайта, разработка сайта, Yii, Node.js, React, Angular")
-		meta(name="description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Node.js. 4SIDE (Украина, Киев)")
+		meta(name="keywords" content=texts.SEO_TITLE_META)
+		meta(name="description" content=texts.SEO_DESCRIPTION_META)
 		meta(property="vk:image" content="http://4side.xyz/images/big_logo-blue.png")
 		meta(property="og:image" content="http://4side.xyz/images/big_logo-blue.png")
 		meta(property="image" content="http://4side.xyz/images/big_logo-blue.png")
-		meta(property="vk:Description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Node.js. 4SIDE")
+		meta(property="vk:Description" content=texts.SEO_DESCRIPTION_META)
 		meta(property="og:title" content="#{title}")
 		meta(property="og:type" content="website")
 		meta(property="og:url" content="http://www.4side.xyz/")
-		meta(property="og:Description" content="Исключительно комплексный подход к созданию решений для бизнесс, сайтов и приложений на платформах Yii, Node.js. 4SIDE")
+		meta(property="og:Description" content=texts.SEO_DESCRIPTION_META)
 		link(rel="alternate" hreflang="#{lang}" href="#{path}")
 		link(rel="image_src" href="http://4side.xyz/images/big_logo-blue.png")
 		link(rel="shortcut icon" href="/images/fav16.png")
