add style and script to opacity

--- a/public/styl/006portfolio.styl
+++ b/public/styl/006portfolio.styl
@@ -9,6 +9,11 @@
 
 .container-of-slider
 	background rgb(245, 245, 245)
+	transition .5s
+	opacity 1
+	
+.container-of-slider__hide
+	opacity 0
 
 .container-of-slider img 
 	width 100%
