--- a/views/index.jade
+++ b/views/index.jade
@@ -79,7 +79,7 @@ block content
 								h3= texts.BUSSINES
 								p= texts.BUSSINES_TEXT
 		.outer-all-block-portfolio
-			div(class="container-of-slider grid" itemscope itemtype="http://schema.org/Product")
+			div(class="container-of-slider grid container-of-slider__hide" itemscope itemtype="http://schema.org/Product")
 				- var i = 0;
 				each val in data.portfolio
 					- i++;
